<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context=".MainActivity.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="4">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/address"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_span="4"
                    android:fontFamily="@font/montserrat"
                    android:maxLines="2"
                    android:singleLine="true"
                    android:textSize="18dp" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/btn_download_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="15dp"
                    android:layout_span="5"
                    android:text="@string/download_info" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/file_size"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/tv_file_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_span="4"
                    android:fontFamily="@font/montserrat"
                    android:singleLine="true"
                    android:text="0"
                    android:textAlignment="center"
                    android:textSize="20dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/file_type"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/tv_file_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_span="4"
                    android:fontFamily="@font/montserrat"
                    android:lines="2"
                    android:text="0"
                    android:textAlignment="center"
                    android:textSize="20dp" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/btn_download_file"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="15dp"
                    android:layout_span="5"
                    android:text="@string/download_file" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/downloading_progress"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/tv_downloading_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_span="4"
                    android:fontFamily="@font/montserrat"
                    android:singleLine="true"
                    android:text="0"
                    android:textAlignment="center"
                    android:textSize="20dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp">

                <com.google.android.material.progressindicator.LinearProgressIndicator
                    android:id="@+id/lpi_downloading_progress"
                    android:layout_width="match_parent"
                    android:layout_span="5"
                    android:max="100" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp">

                <TextView
                    android:id="@+id/tv_downloading_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_span="5"
                    android:fontFamily="@font/montserrat"
                    android:singleLine="true"
                    android:textAlignment="center"
                    android:textSize="20dp" />
            </TableRow>

        </TableLayout>
    </ScrollView>
</LinearLayout>